# secure-file-transfer-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: decrypt.hpp  encrypt.hpp
src/: decrypt.cpp  encrypt.cpp  main.cpp
